--- a/meusite/index.html
+++ b/meusite/index.html
@@ -10,6 +10,7 @@
     <title>Meu site</title>
 </head>
 <body>
+    <main>
 <div class="projeto2
 
 "></div>
@@ -37,6 +38,9 @@
     
     </div>
 
-    <footer> <p>Desenvolvido por Du Rodrigues &copy; 2025</p></footer>
+
+</main>
+<footer> <p>Desenvolvido por Du Rodrigues &copy; 2025</p></footer>
+
 </body>
 </html>
