--- a/projeto-meuslinks/index.html
+++ b/projeto-meuslinks/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./favicon/icons8-codificação-laptop-16.png" type="image/x-icon">
 
     <title>Meus Links</title>
 </head>
@@ -43,10 +44,9 @@
                 </div>
 
 
-                <div class="whatsapp">
-                    <a href="https://wa.me/5519989614546" target="_blank"><img width="50" height="50"
-                            src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="whatsapp--v1" /></a>
-                            <p>Whatsapp</p>
+                <div class="facebook">
+                    <a href="https://wa.me/5519989614546" target="_blank"><img width="50" height="50" src="https://img.icons8.com/color/48/facebook.png" alt="facebook"/></a>
+                            <p>Facebook</p>
                 </div>
 
 
