--- a/projeto-meuslinks/index.html
+++ b/projeto-meuslinks/index.html
@@ -29,6 +29,12 @@
 
                 </div>
 
+                <div class="instagram">
+                    <a href="https://www.instagram.com/du.rodrigues7?igsh=eWV1ODZkOGl6dnh6&utm_source=qr" target="_blank"><img width="50" height="50" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/></a>
+                    <p>Instagram</p>
+
+                </div>
+
                 <div class="linkedin">
                     <a href="https://www.linkedin.com/in/durodriguesdev77/" target="_blank"><img width="50" height="50"
                             src="https://img.icons8.com/color/48/linkedin.png" alt="linkedin" /></a>
