--- a/projeto-meuslinks/index.html
+++ b/projeto-meuslinks/index.html
@@ -51,7 +51,7 @@
 
 
                 <div class="facebook">
-                    <a href="https://wa.me/5519989614546" target="_blank"><img width="50" height="50" src="https://img.icons8.com/color/48/facebook.png" alt="facebook"/></a>
+                    <a href= "https://www.facebook.com/share/15qhycfZbd/?mibextid=wwXIfr" target="_blank"><img width="50" height="50" src="https://img.icons8.com/color/48/facebook.png" alt="facebook"/></a>
                             <p>Facebook</p>
                 </div>
 
