--- a/projeto-meuslinks/index.html
+++ b/projeto-meuslinks/index.html
@@ -24,7 +24,7 @@
 
                 <div class="github">
                     <a href="https://github.com/DuRodrigues77" target="_blank"><img width="50" height="50"
-                            src="https://img.icons8.com/ios-filled/50/github.png" alt="github" /></a>
+                            src="https://img.icons8.com/color/48/github--v1.png" alt="github" /></a>
                     <p>GitHub</p>
 
                 </div>
