--- a/projeto-meuslinks/index.html
+++ b/projeto-meuslinks/index.html
@@ -21,11 +21,9 @@
 
                 <h1> Links </h1>
 
-
-
                 <div class="github">
                     <a href="https://github.com/DuRodrigues77" target="_blank"><img width="50" height="50"
-                            src="https://img.icons8.com/color/48/github--v1.png" alt="github" /></a>
+                                src="https://img.icons8.com/color/48/github--v1.png" alt="github" /></a>
                     <p>GitHub</p>
 
                 </div>
@@ -38,25 +36,20 @@
 
                 <div class="linkedin">
                     <a href="https://www.linkedin.com/in/durodriguesdev77/" target="_blank"><img width="50" height="50"
-                            src="https://img.icons8.com/color/48/linkedin.png" alt="linkedin" /></a>
+                                src="https://img.icons8.com/color/48/linkedin.png" alt="linkedin" /></a>
                     <p>Linkedin</p>
                 </div>
 
                 <div class="discord">
                     <a href="https://discord.com/users/1275222794157953150" target="_blank"><img width="50" height="50"
-                            src="https://img.icons8.com/fluency/48/discord-logo.png" alt="discord-logo" /></a>
+                                src="https://img.icons8.com/fluency/48/discord-logo.png" alt="discord-logo" /></a>
                     <p>Discord</p>
-
-
                 </div>
-
 
                 <div class="facebook">
                     <a href= "https://www.facebook.com/share/15qhycfZbd/?mibextid=wwXIfr" target="_blank"><img width="50" height="50" src="https://img.icons8.com/color/48/facebook.png" alt="facebook"/></a>
-                            <p>Facebook</p>
+                    <p>Facebook</p>
                 </div>
-
-
         </article>
     </main>
 
@@ -65,4 +58,5 @@
     
     </footer>
 
+</body>
 </html>
