--- a/projeto-meuslinks/index.html
+++ b/projeto-meuslinks/index.html
@@ -19,12 +19,11 @@
             <h2>&lt;/Du Rodrigues></h2>
             <div class="projeto">
 
-                <h1> Links </h1>
+                <h1>Redes</h1>
 
                 <div class="github">
-                    <a href="https://github.com/DuRodrigues77" target="_blank"><img width="50" height="50"
-                                src="https://img.icons8.com/color/48/github--v1.png" alt="github" /></a>
-                    <p>GitHub</p>
+                    <a href="https://github.com/DuRodrigues77" target="_blank"><img width="48" height="48" src="https://img.icons8.com/color/48/tiktok--v1.png" alt="tiktok--v1"/></a>
+                    <p>TikTok</p>
 
                 </div>
 
@@ -35,9 +34,8 @@
                 </div>
 
                 <div class="linkedin">
-                    <a href="https://www.linkedin.com/in/durodriguesdev77/" target="_blank"><img width="50" height="50"
-                                src="https://img.icons8.com/color/48/linkedin.png" alt="linkedin" /></a>
-                    <p>Linkedin</p>
+                    <a href="https://www.linkedin.com/in/durodriguesdev77/" target="_blank"><img width="48" height="48" src="https://img.icons8.com/color/48/youtube-play.png" alt="youtube-play"/></a>
+                    <p>YouTube</p>
                 </div>
 
                 <div class="discord">
@@ -46,15 +44,12 @@
                     <p>Discord</p>
                 </div>
 
-                <div class="facebook">
-                    <a href= "https://www.facebook.com/share/15qhycfZbd/?mibextid=wwXIfr" target="_blank"><img width="50" height="50" src="https://img.icons8.com/color/48/facebook.png" alt="facebook"/></a>
-                    <p>Facebook</p>
-                </div>
+               
         </article>
     </main>
 
     <footer>
-        <p>Desenvolvido por Du Rodrigues &copy; 2025 </p>
+        <p>Desenvolvido por Du Rodrigues &copy; 2026 </p>
     
     </footer>
 
