--- a/projeto-meuslinks/index.html
+++ b/projeto-meuslinks/index.html
@@ -22,19 +22,19 @@
                 <h1>Redes</h1>
 
                 <div class="github">
-                    <a href="https://github.com/DuRodrigues77" target="_blank"><img width="48" height="48" src="https://img.icons8.com/color/48/tiktok--v1.png" alt="tiktok--v1"/></a>
+                    <a href="https://www.tiktok.com/@durodrigues_7?_r=1&_t=ZS-93lNj9rxx0D" target="_blank"><img width="48" height="48" src="https://img.icons8.com/color/48/tiktok--v1.png" alt="tiktok--v1"/></a>
                     <p>TikTok</p>
 
                 </div>
 
                 <div class="instagram">
-                    <a href="https://www.instagram.com/du.rodrigues7?igsh=eWV1ODZkOGl6dnh6&utm_source=qr" target="_blank"><img width="50" height="50" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/></a>
+                    <a href="https://www.instagram.com/duzera93?igsh=MTBuNzV2eno1cm1ncw%3D%3D&utm_source=qr" target="_blank"><img width="50" height="50" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/></a>
                     <p>Instagram</p>
 
                 </div>
 
                 <div class="linkedin">
-                    <a href="https://www.linkedin.com/in/durodriguesdev77/" target="_blank"><img width="48" height="48" src="https://img.icons8.com/color/48/youtube-play.png" alt="youtube-play"/></a>
+                    <a href="https://www.youtube.com/@duzera_93" target="_blank"><img width="48" height="48" src="https://img.icons8.com/color/48/youtube-play.png" alt="youtube-play"/></a>
                     <p>YouTube</p>
                 </div>
 
